--- a/systemd/chia-poolboys.service
+++ b/systemd/chia-poolboys.service
@@ -4,7 +4,7 @@ After=network-online.target mosquitto.service
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/python3 ~/poolboys/main.py
+ExecStart=/usr/bin/python3 %%PATH%%/main.py
 
 [Install]
 WantedBy=multi-user.target
