--- a/systemd/chia-poolboys.service
+++ b/systemd/chia-poolboys.service
@@ -4,7 +4,7 @@ After=network-online.target mosquitto.service
 
 [Service]
 Type=simple
-ExecStart=CHIA/venv/bin/python3 PATH/main.py
+ExecStart=POOL/venv/bin/python3 POOL/main.py
 
 [Install]
 WantedBy=multi-user.target
